fix article content alignment

--- a/css/type.css
+++ b/css/type.css
@@ -51,12 +51,15 @@ h3 {
 .article-subheader {
 	font-family: Avenir;
 	font-size: 32px;
+	text-align: left;
+	padding: 16px;
 }
 
 .article-content {
 	font-family: Zilla Slab;
 	font-size: 20px;
 	line-height: 32px;
+	padding: 16px;
 }
 
 figcaption {
